--- a/my-webpage.html
+++ b/my-webpage.html
@@ -15,7 +15,7 @@
             <h1>The City I Would Love To Visit</h1>
             <hr>
             <h1>Kagiso Hadebe</h1>
-            <img src="tbnp.jpg" length="500" width="300"></a></li>
+            <img src="1.jpg" length="500" width="300"></a></li>
             <hr>
         </div>
 
@@ -61,44 +61,30 @@
         <hr>
         <div class="history">
             <div class="Kaap">
-                <img src="Bo-Kaap.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
+                <img src="2.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
                 margin-bottom: 5px;">
-                <h2>Bo-Kaap</h2>
-                <p>Situated at the foot of Signal Hill, on the fringe of the city centre, and formerly known as the
-                    Malay
-                    Quarter, the Bo-Kaap’s origins date back to the 1760s when numerous “huurhuisjes” (rental
-                    houses)
-                    were
-                    built and leased to slaves. These people were known as Cape Malays, and were brought from
-                    Malaysia,
-                    Indonesia and the rest of Africa to work in the Cape. </p>
+                <h2>District 6 Muesum</h2>
+                <p>District Six Museum is a museum in the former inner-city residential area and, District Six, in Cape Town,
+                    South Africa in an old Methodist church.
+        
+                    District Six Foundation was founded in 1989 and the museum in 1994, as a memorial to the forced movement of
+                    60,000 inhabitants of various races in District Six during Apartheid in South Africa in the 1970s</p>
             </div>
             <div class="long">
-                <img src="long street.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
+                <img src="3.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
                     margin-bottom: 5px;">
-                <h2>Long Street</h2>
-                <p>The CBD is the heart of Cape Town, and Long Street is its major artery. Running all the way from
-                    the
-                    Cape
-                    Town Convention Centre, cutting through the middle of the CBD, and ending at Kloof Street, Long
-                    Street
-                    is a major part of the city’s street culture.During the day the street is a full with people
-                    visiting
-                    the interesting shops and café that line the street, and when the sun drops behind the mountain
-                    the
-                    activity intensifies around the street’s many restaurants, bars, and clubs.</p>
+                <h2>Slave Lodge</h2>
+                <p>  The Slave Lodge is one of the oldest buildings in Cape Town. The building has answered to many names in the
+                    last three centuries, namely; Slave Lodge, Government Offices Building, Old Supreme Court, and SA Cultural
+                    History Museum. All these names reflect the long and rich history of the building.</p>
             </div>
             <div class="parliment">
-                <img src="parliment.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
+                <img src="4.jpg" length="80" height="100" style="float: left; margin-right: 10px; 
                 margin-bottom: 5px;">
-                <h2>RSA parliment</h2>
-                <p>The Houses of Parliament of South Africa are situated in Cape Town. The building consists of
-                    three
-                    main
-                    sections: the original building, completed in 1884, and additions constructed in the 1920s and
-                    1980s. The
-                    newer addition currently houses the National Assembly (the lower house of the bicameral
-                    Parliament.
+                <h2>Castle of good hope</h2>
+                <p>known locally as the Castle or Cape Town Castle is a bastion fort built in the 17th century in Cape
+                    Town, South Africa. Originally located on the coastline of Table Bay, following land reclamation the fort is
+                    now located inland
                 </p>
             </div>
         </div>
