made some changes

--- a/my-webpage-grid.html
+++ b/my-webpage-grid.html
@@ -60,7 +60,7 @@
 
         <hr>
         <div class="row"></div>
-    </div>
+    <!-- </div> -->
 
     <div class="row">
         <h2 style="margin:auto;">Historic Places In Cape Town</h2>
